b=22677. Fix for the part of the bug where the second table taht is relatively positioned flashes when the window is resized